Bug 1383647 - Part 2: Add unicode::Can{Lower,Upper}Case specialized for Latin1 characters. r=jandem